[package]
name = "hoya"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rquickjs = { version = "0.9.0", features = ["bindgen", "parallel"] }
wasmtime = "33.0.0"
bytes = "1"
url = { version = "2.5.0", features = ["serde"] }
anyhow = "1.0"
